--- a/static/scss/_partials/landscape-desktop/pages/_checkout-page.scss
+++ b/static/scss/_partials/landscape-desktop/pages/_checkout-page.scss
@@ -36,6 +36,10 @@ caption p {
     width: 44vw;
 }
 
+#payment-form > legend {
+    color: white;
+}
+
 #submit_payment_btn {
     display: flex;
     justify-content: center;
