--- a/static/scss/_partials/landscape-ipad/pages/_reviews-page.scss
+++ b/static/scss/_partials/landscape-ipad/pages/_reviews-page.scss
@@ -150,7 +150,7 @@ return-product-btn:hover {
     border-radius: 5px;
     border: 1px solid grey;
     width: 24vw;
-    height: 32vh;
+    height: 18vh;
     position: fixed;
     opacity: 0.0;
     z-index: -1;
@@ -168,7 +168,7 @@ return-product-btn:hover {
 
     font: {
         family: $dosisFont;
-        size: $delPopupFontSize;
+        size: 2.5vw;
     }
 }
 
@@ -176,9 +176,10 @@ return-product-btn:hover {
     background-color: lightcoral;
     color: rgb(65, 65, 65);
     margin-right: 2px;
-    width: 6vw;
+    width: 10vw;
     transition: color .3s ease-in-out;
     text-decoration: none;
+    font-size: 2.0vw;
 }
 
 
@@ -187,12 +188,14 @@ return-product-btn:hover {
 }
 
 .delete-cancel-btn {
-    width: 6vw;
+    width: 10vw;
     background-color: lightslategray;
     margin-left: 2px;
     font-family: $dosisFont;
     color: whitesmoke;
     transition: color .3s ease-in-out;
+    font-size: 2.0vw;
+
 }
 
 .delete-cancel-btn:hover {
