--- a/static/scss/_partials/portrait-ipad/pages/_cart-page.scss
+++ b/static/scss/_partials/portrait-ipad/pages/_cart-page.scss
@@ -10,7 +10,7 @@
 }
 
 .addcard-icon {
-    font-size: 3vw;
+    font-size: 5vw;
 }
 
 .cart-summary-wrapper {
@@ -57,6 +57,7 @@
 
 .amend-btn-wrapper {
     width: 100%;
+    padding-top: 2vw;
 }
 
 .amend-btn {
@@ -68,6 +69,7 @@
 #totalamount {
     width: 100%;
     font-size: 6vw;
+    color: white;
 }
 
 .glyphicon-euro {
