--- a/static/scss/_partials/landscape-mobile/pages/_cart-page.scss
+++ b/static/scss/_partials/landscape-mobile/pages/_cart-page.scss
@@ -9,7 +9,7 @@
 }
 
 .addcard-icon {
-    font-size: 1.4vw;
+    font-size: 2.5vw;
 }
 
 .cart-summary-wrapper {
@@ -28,7 +28,7 @@
 }
 
 .free-shipping-message {
-    font-size: 1.5vw;
+    font-size: 4.5vw;
 }
 
 .empty-cart-wrapper {
@@ -50,13 +50,13 @@
 
 #emptycart-product-link {
     width: 100%;
-    font-size: 4vw;
+    font-size: 6vw;
     text-align: center;
 }
 
 .input-group-addon {
-    width: 100%;
-    font-size: 1.2vw;
+    //width: 100%;
+    font-size: 2.0vw;
 }
 
 .amend-btn-wrapper {
@@ -65,13 +65,14 @@
 }
 
 .amend-btn {
-    width: 10vw;
-    font-size: 1.2vw;
+    width: 18vw;
+    font-size: 2.5vw;
 }
 
 .shipping-fee, #totalamount {
     width: 100%;
-    font-size: 2vw;
+    font-size: 4.0vw;
+    color: white;
 }
 
 .glyphicon-euro {
@@ -84,6 +85,6 @@
 
 .checkout-btn {
     font-family: $dosisFont;
-    font-size: 1.5vw;
-    width: 10vw;
+    font-size: 4.5vw;
+    width: 30vw;
 }
