--- a/static/scss/_partials/landscape-mobile/pages/_checkout-page.scss
+++ b/static/scss/_partials/landscape-mobile/pages/_checkout-page.scss
@@ -28,19 +28,23 @@ caption p {
     width: 100%;
     color: white;
     text-align: center;
-    font-size: 2.0vw;
+    font-size: 4.0vw;
 }
 
 #payment-form {
     margin-top: 2vw;
-    width: 44vw;
+    width: 55vw;
+}
+
+#payment-form > legend {
+    color: white;
 }
 
 #submit_payment_btn {
     display: flex;
     justify-content: center;
-    width: 12vw;
-    font-size: 1.5vw;
+    width: 20vw;
+    font-size: 2.5vw;
     transition: color .3s ease-in-out;
 }
 
