--- a/static/scss/_partials/landscape-desktop/pages/_cart-page.scss
+++ b/static/scss/_partials/landscape-desktop/pages/_cart-page.scss
@@ -1,5 +1,8 @@
 .cart-wrapper {
-    padding-bottom: 2vw;
+    padding: {
+        top: 2vw;
+        bottom: 2vw;
+    }
     background-color: $page-bgr-clr;
     min-height: 92vh;
 }
@@ -25,6 +28,7 @@
 
 .free-shipping-message {
     font-size: 1.5vw;
+    color: white;
 }
 
 .empty-cart-wrapper {
